# hello-autotools

./: .gitignore  Makefile.am  README.md  autogen.sh  config.h  configure.ac
src/: main.c
